samples/_failures_safe/1761337867_4a4fdd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_865dc1f3.c: In function ‘main’:
./samples/SAFE/__tmp_865dc1f3.c:145:9: error: expected expression at end of input
  145 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_865dc1f3.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_865dc1f3.c:145:9: error: expected declaration or statement at end of input
